Hashicorp Vault Se añadio todo lo necesario para guardar los secretos en la aplicacion. Se configuró de igual forma el bootstrap.properties para ejecutar el Vault. Se añadieron todas las dependencias correspondientes.

--- a/ucobet-generales-ms/.gitignore
+++ b/ucobet-generales-ms/.gitignore
@@ -33,6 +33,7 @@ build/
 .vscode/
 
 
-
+#Personalizados
 /src/main/resources/bootsecurity.12
-/src/main/resources/application.properties
+ucobet-generales-ms.json
+/src/main/resources/bootstrap.properties
